--- a/main-service/src/main/resources/application-test.properties
+++ b/main-service/src/main/resources/application-test.properties
@@ -1,5 +1,22 @@
 server.port=8080
 client.url=http://localhost:9090
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.http.converter.json=DEBUG
+logging.level.com.fasterxml.jackson=DEBUG
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:main;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
 spring.datasource.username=maintest
